# tmotor-f1404-model

./: CMakeLists.txt  LICENSE  MOTOR_CALC.md  MOTOR_SPEC.md  README.md
src/: test_motor.cpp
